[Goodmoves] Home scroll styling

--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -2215,13 +2215,18 @@ form.inline-form {
   transition: background-image .2s ease-in-out;
   cursor: pointer;
   .scroll-icon {
-    color: $mdc-theme-primary;
+    background-color: $mdc-theme-primary;
+    color: white;
+    font-size: 3rem;
+    height: $unit*3;
+    width: $unit*3;
+    border-radius: 50%;
   }
 }
 .scroll-button:hover {
   // opacity: 1;
   .scroll-icon {
-    color: $mdc-theme-primary-dark;
+    background-color: $mdc-theme-primary-dark;
   }
 }
 .scroll-button.scroll-left {
