--- a/sites/configurations/goodmoves/templates/pages/home.hbs
+++ b/sites/configurations/goodmoves/templates/pages/home.hbs
@@ -99,10 +99,10 @@
     <div class="home-jobs">
       <div class="mdc-layout-grid equal-height home-shortlist">
         <div class="scroll-button scroll-left">
-          <span class="fas fa-chevron-circle-left fa-3x scroll-icon"></span>
+          <span class="fal fa-fw fa-angle-left scroll-icon"></span>
         </div>
         <div class="scroll-button scroll-right">
-          <span class="fas fa-chevron-circle-right fa-3x scroll-icon"></span>
+          <span class="fal fa-fw fa-angle-right scroll-icon"></span>
         </div>
         <div class="mdc-layout-grid__inner scrolling-grid">
           {{#compare data.supplimentaryResponses.shortlist_open.hits.total ">" 0}}
@@ -166,10 +166,10 @@
   <div class="home-jobs">
     <div class="mdc-layout-grid equal-height home-latest">
       <div class="scroll-button scroll-left">
-        <span class="fas fa-chevron-circle-left fa-3x"></span>
+        <span class="fal fa-fw fa-angle-left scroll-icon"></span>
       </div>
       <div class="scroll-button scroll-right">
-        <span class="fas fa-chevron-circle-right fa-3x"></span>
+        <span class="fal fa-fw fa-angle-right scroll-icon"></span>
       </div>
       <div class="mdc-layout-grid__inner scrolling-grid">
         {{#each data.primaryResponse.hits.hits ~}}
@@ -207,10 +207,10 @@
   <div class="home-jobs">
     <div class="mdc-layout-grid equal-height home-top">
       <div class="scroll-button scroll-left">
-        <span class="fas fa-chevron-circle-left fa-3x"></span>
+        <span class="fal fa-fw fa-angle-left scroll-icon"></span>
       </div>
       <div class="scroll-button scroll-right">
-        <span class="fas fa-chevron-circle-right fa-3x"></span>
+        <span class="fal fa-fw fa-angle-right scroll-icon"></span>
       </div>
       <div class="mdc-layout-grid__inner scrolling-grid">
         {{#each data.supplimentaryResponses.top.hits.hits ~}}
