--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -2233,9 +2233,19 @@ form.inline-form {
   left: $unit;
   background-image: linear-gradient(to left, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0) 60%, rgba(0, 0, 0, 0.1));
 }
+.fa-angle-left:before {
+  width: 1.5rem;
+  display: inline-block;
+  text-align: left;
+}
 .scroll-button.scroll-right {
   right: $unit;
   background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0) 60%, rgba(0, 0, 0, 0.1));
+}
+.fa-angle-right:before {
+  width: 1.5rem;
+  display: inline-block;
+  text-align: right;
 }
 .scroll-button.scroll-left:hover {
   background-image: linear-gradient(to left, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0) 60%, rgba(0, 0, 0, 0.4));
