--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -809,6 +809,12 @@ a {
 #map-full.hidden {
   opacity: 0;
 }
+.leaflet-container {
+  a {
+    color: $mdc-theme-primary;
+    -webkit-tap-highlight-color: transparent;
+  }
+}
 
 .search-info {
   margin: $unit*1.5 0 $unit*(3/4);
