--- a/sites/configurations/goodmoves/partials/vacancy/map.hbs
+++ b/sites/configurations/goodmoves/partials/vacancy/map.hbs
@@ -1,25 +1,25 @@
 <div class="goodmoves-{{vacancy_status}} map-content">
-  <h3>{{title}}</h3>
-  {{#if organisation.name}}
-  <div>
+  <h3 class="mdc-typography--headline7">{{title}}</h3>
+  {{#if organisation.name ~}}
+  <div class="mdc-typography--body2 v-margin">
     <strong>{{organisation.name}}</strong>
   </div>
-  {{/if}}
-  <div class="post-info">
-    {{#if closing_date}}
-    <div class="post-info-item post-info-closing">
-      <span class="far fa-calendar-alt fa-fw" title="Closing date"></span>
-      {{{momentFormat (moment closing_date "x") "Do MMMM YYYY"}}}
-    </div>
-    {{/if}}
-    {{#if salary}}
+  {{/if ~}}
+  <div class="mdc-typography--body2 post-info">
+    {{#if salary ~}}
     <div class="post-info-item post-info-salary">
       <span class="far fa-calculator fa-fw" title="Salary"></span>
       {{{salary}}}
     </div>
-    {{/if}}
+    {{/if ~}}
+    {{#if closing_date ~}}
+    <div class="post-info-item post-info-closing">
+      <span class="far fa-calendar-alt fa-fw" title="Closing date"></span>
+      {{{momentFormat (moment closing_date "x") "Do MMMM YYYY"}}}
+    </div>
+    {{/if ~}}
   </div>
-  <div>
+  <div class="mdc-typography--body1">
     <a href="/vacancy/{{slug}}{{@root.request.url.search}}" class="mdc-card__action">Find out more</a>
   </div>
 </div>
