Bugfix for pagination

--- a/sites/configurations/goodmoves/templates/vacancies/map.hbs
+++ b/sites/configurations/goodmoves/templates/vacancies/map.hbs
@@ -9,9 +9,7 @@
 {{> vacancy_search_form this instance_id="perm"}}
 
 <div id="detailed-results-container" class="container-content container-map">
-  <div id="map-full" data-map-name="fullMap" data-map-options='{
-    "closePopupOnClick": false
-  }'></div>
+  <div id="map-full" data-map-name="fullMap" data-map-options='{}'></div>
 </div>
 {{#each data.search_data.map_results.hits.hits}}
   {{#if _source.geo_vacancy_coords}}
