[Goodmoves] Location alterations

--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -355,6 +355,10 @@ footer h3,
 .mdc-button {
   transition: 0.1s;
 }
+.mdc-button {
+  height: auto;
+  min-height: 36px;
+}
 .mdc-button--large {
   height: 56px;
 }
