--- a/sites/configurations/goodmoves/partials/vacancy-search-form.hbs
+++ b/sites/configurations/goodmoves/partials/vacancy-search-form.hbs
@@ -58,7 +58,7 @@
                     "componentRestrictions": {
                       "country": "gb"
                     }
-                  }' data-location-lat="[name='lat']" data-location-lng="[name='lng']">
+                  }' data-location-lat="[name='lat']" data-location-lng="[name='lng']" data-location-types="[name='location_types']">
                 <label class="mdc-floating-label mdc-floating-label--float-above" for="{{instance_id}}-location">
                   Location
                 </label>
