--- a/sites/configurations/goodmoves/partials/vacancy/search-result.hbs
+++ b/sites/configurations/goodmoves/partials/vacancy/search-result.hbs
@@ -14,7 +14,11 @@
       <ul class="fa-ul mdc-card__action">
         <li class="mdc-card__info--vacancy-status mdc-typography--body2">
           <span class="fa-li"><span class="far fa-location-arrow fa-fw" title="Distance"></span></span>
-          Within {{inflect (round distance "up") "mile" "miles" true}} of {{@root.request.params.query.location}}
+          {{#compare distance "<" 3 ~}}
+            Less than {{inflect (round distance "up") "mile" "miles" true}} from {{@root.request.params.query.location}}
+          {{else}}
+            Within {{inflect (round distance "up") "mile" "miles" true}} of {{@root.request.params.query.location}}
+          {{/compare ~}}
         </li>
       </ul>
       {{/if ~}}
