--- a/sites/configurations/goodmoves/templates/pages/home.hbs
+++ b/sites/configurations/goodmoves/templates/pages/home.hbs
@@ -18,8 +18,8 @@
         </div>
       </div>
       <form id="search-view" class="search-form mdc-elevation--z5" action="/search" method="GET">
-        <input type="hidden" name="lat" value="">
-        <input type="hidden" name="lng" value="">
+        <input type="hidden" name="lat" value="" />
+        <input type="hidden" name="lng" value="" />
         <div class="mdc-layout-grid">
           <div class="mdc-layout-grid__inner">
             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-5-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
@@ -65,7 +65,7 @@
               </div>
             </div>
             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-desktop mdc-layout-grid__cell--span-1-tablet mdc-layout-grid__cell--span-4-phone">
-              <button type="submit" id="search-jobs" class="mdc-button mdc-button--raised mdc-text-field--box mdc-button--search mdc-ripple-surface mdc-ripple-surface--primary" data-mdc-auto-init="MDCRipple">
+              <button type="submit" id="search-jobs" class="mdc-button mdc-button--raised mdc-button--large mdc-text-field--box mdc-button--search mdc-ripple-surface mdc-ripple-surface--primary" data-mdc-auto-init="MDCRipple">
                 Search
                 <span class="far fa-search" aria-hidden="true"></span>
               </button>
