Occasional draw mostly styled!

--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -2293,6 +2293,33 @@ form.inline-form {
   .hide-lg {
     display: none;
   }
+
+  .mdc-drawer--occasional {
+    align-items: flex-start;
+    z-index: 1;
+    width: 320px;
+    margin-right: 1.5rem;
+    margin-bottom: 0;
+    padding-bottom: 1rem;
+    border-right: none;
+    background-color: white !important;
+    color: rgba(0, 0, 0, 0.87);
+    border-left: 0;
+    left: 0;
+    right: initial;
+    display: inline-flex;
+    flex: 0 0 auto;
+    flex-direction: column;
+    box-sizing: border-box;
+    overflow: hidden;
+    position: static !important;
+    height: auto !important;
+    
+    .mdc-drawer__drawer {
+      transform: none;
+      width: 320px;
+    }
+  }
 }
 
 @media screen and (min-width: $desktop-landscape-breakpoint + 1) {
