--- a/sites/configurations/goodmoves/templates/account/settings.hbs
+++ b/sites/configurations/goodmoves/templates/account/settings.hbs
@@ -1,4 +1,6 @@
-{{> vacancy_search_form this instance_id="perm"}}
+{{!-- <div class="hide-sm hide-md">
+  {{> vacancy_search_form this instance_id="perm"}}
+</div> --}}
 
 {{#*inline "linkChip"}}
   <div class="mdc-chip{{#if linked}} mdc-chip--selected{{/if}} provider-{{provider}}" data-provider-link="{{provider}}">
