--- a/sites/configurations/goodmoves/templates/vacancies/map.hbs
+++ b/sites/configurations/goodmoves/templates/vacancies/map.hbs
@@ -6,7 +6,9 @@
   there on the page and we can just display the hidden div instead
 -->
 
-{{> vacancy_search_form this instance_id="perm"}}
+<div class="hide-sm">
+  {{> vacancy_search_form this instance_id="perm"}}
+</div>
 
 <div id="detailed-results-container" class="container-content container-map">
   <div id="map-full" data-map-name="fullMap" data-map-options='{
