--- a/sites/configurations/goodmoves/templates/vacancies/shortlist.hbs
+++ b/sites/configurations/goodmoves/templates/vacancies/shortlist.hbs
@@ -1,4 +1,6 @@
-{{> vacancy_search_form this instance_id="perm"}}
+{{!-- <div class="hide-sm hide-md">
+  {{> vacancy_search_form this instance_id="perm"}}
+</div> --}}
 
 <div id="detailed-results-container" class="container-content goodmoves-shortlist">
   {{#compare data.shortlist.open.hits.total ">" 0}}
