--- a/sites/configurations/goodmoves/templates/pages/page.hbs
+++ b/sites/configurations/goodmoves/templates/pages/page.hbs
@@ -1,4 +1,6 @@
-{{> vacancy_search_form this instance_id="perm"}}
+{{!-- <div class="hide-sm hide-md">
+  {{> vacancy_search_form this instance_id="perm"}}
+</div> --}}
 
 <div class="container-content goodmoves-page">
   {{> banner_ads}}
