--- a/sites/configurations/goodmoves/templates/vacancies/search.hbs
+++ b/sites/configurations/goodmoves/templates/vacancies/search.hbs
@@ -1,4 +1,6 @@
-{{> vacancy_search_form this instance_id="perm"}}
+{{!-- <div class="hide-sm hide-md">
+  {{> vacancy_search_form this instance_id="perm"}}
+</div> --}}
 
 <div id="detailed-results-container" class="container-content goodmoves-vacancy-search">
   {{> vacancy_search_results this}}
