--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -2323,10 +2323,12 @@ form.inline-form {
     overflow: hidden;
     position: static !important;
     height: auto !important;
+    pointer-events: all;
     
     .mdc-drawer__drawer {
       transform: none;
       width: 320px;
+      pointer-events: all;
     }
   }
 }
