Sorted out mobile search menus

--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -2281,6 +2281,9 @@ form.inline-form {
   .hide-sm {
     display: none;
   }
+  .container-content {
+    padding-left: $unit;
+  }
 }
 
 @media screen and (max-width: $mobile-landscape-breakpoint + 1) {
@@ -2295,6 +2298,9 @@ form.inline-form {
   }
   .mdc-toolbar-fixed-adjust {
     padding-top: $header-upper-height;
+  }
+  .container-content {
+    padding-left: $unit;
   }
 }
 
