Upgraded fontawesome to 5.2 and grouped regions by country

--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -1185,6 +1185,9 @@ hr {
 .page-content {
   padding: $unit 0 $unit*2;
 }
+.mdc-drawer__content {
+  overflow-y: scroll;
+}
 .mdc-drawer__content-padded {
   padding: $unit;
 }
@@ -1662,6 +1665,9 @@ body {
 footer,
 .browse main {
   .mdc-list {
+    .mdc-list-item--0 .mdc-typography--headline7 {
+      margin-top: 0;
+    }
     .mdc-list-item {
       padding: 0;
       .mdc-list-item__text {
@@ -2358,7 +2364,7 @@ body.map {
     position: static !important;
     height: auto !important;
     pointer-events: all;
-    
+
     .mdc-drawer__drawer {
       transform: none;
       width: 320px;
@@ -2366,7 +2372,7 @@ body.map {
     }
   }
 
-  /*  
+  /*
   body.map #map-full {
     left: 320px;
   }
