[Goodmoves] Custom markers

--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -820,6 +820,15 @@ a {
     -webkit-tap-highlight-color: transparent;
   }
 }
+.vacancy_icon {
+  text-align: center;
+  font-size: 2rem;
+  line-height: 1;
+  color: $mdc-theme-primary;
+  .fas {
+    text-shadow: 3px 4px 0.5rem rgba(42,42,42,.25)
+  }
+}
 
 .search-info {
   margin: $unit*1.5 0 $unit*(3/4);
