--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -821,6 +821,22 @@ a {
   }
 }
 
+.popup-pager .map-content:not(:first-child) {
+  display: none;
+}
+
+.pager-left {
+  top: 0;
+  left: 0;
+  margin-left: -1rem;
+}
+
+.pager-right {
+  top: 0;
+  right: 0;
+  margin-right: -1rem;
+}
+
 .search-info {
   margin: $unit*1.5 0 $unit*(3/4);
   background: white;
