Added number overlays to map markers

--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -828,6 +828,14 @@ a {
   .fas {
     text-shadow: 3px 4px 0.5rem rgba(42,42,42,.25)
   }
+  .map-marker-overlay {
+    color: #ffffff;
+    position: absolute;
+    margin-left: -1.25rem;
+    font-size: 0.5em;
+    margin-top: 0.25rem;
+    font-weight: bold;
+  }
 }
 
 .popup-pager .map-content:not(:first-child) {
