--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -824,9 +824,12 @@ a {
   text-align: center;
   font-size: 2.5rem;
   line-height: 1;
-  color: $mdc-theme-primary;
-  .fas {
+  .marker-icon {
+    color: $mdc-theme-primary;
     text-shadow: 3px 4px 0.5rem rgba(42,42,42,.25)
+  }
+  .marker-icon.shortlisted {
+    color: $mdc-theme-primary-dark;
   }
   .map-marker-overlay {
     color: #ffffff;
