Map improvements for vacancy page

--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -800,6 +800,10 @@ a {
   width: 100%;
 }
 
+#map-vacancy {
+  height: 40vh;
+  width: 100%;
+}
 #map-full {
   -webkit-transition: opacity .1s ease-in-out;
   -moz-transition: opacity .1s ease-in-out;
@@ -807,6 +811,7 @@ a {
   -o-transition: opacity .1s ease-in-out;
   transition: opacity .1s ease-in-out;
   height: calc(100vh - 138px);
+  width: 100%;
 }
 #map-full.shown {
   opacity: 1;
