--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -2299,6 +2299,11 @@ form.inline-form {
     background-color: $mdc-theme-primary-dark;
   }
 }
+.scroll-button.pager {
+  height: 60%;
+  margin-top: 10%;
+  margin-bottom: 10%;
+}
 .scroll-button.scroll-left {
   left: $unit;
   background-image: linear-gradient(to left, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0) 60%, rgba(0, 0, 0, 0.1));
