--- a/sites/configurations/goodmoves/partials/vacancy/map.hbs
+++ b/sites/configurations/goodmoves/partials/vacancy/map.hbs
@@ -7,10 +7,10 @@
   {{/if ~}}
   <div class="mdc-typography--body2 post-info">
     {{#if role_status_list ~}}
-    <li class="mdc-card__info--vacancy-status mdc-typography--body1">
-      <span class="fa-li"><span class="far fa-clock fa-fw" title="Status"></span></span>
-      {{role_status_list}}
-    </li>
+    <div class="post-info-item post-info-status">
+      <span class="far fa-clock fa-fw" title="Working pattern"></span>
+      {{{role_status_list}}}
+    </div>
     {{/if ~}}
     {{#if salary ~}}
     <div class="post-info-item post-info-salary">
