--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -398,7 +398,7 @@ footer h3,
 }
 
 .sign-in-form {
-  margin: 4vh auto;
+  padding: $unit*1.5 0;
   .mdc-card {
     min-height: 40vh;
     max-width: 500px;
