Tidy search form

--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -1245,6 +1245,9 @@ hr {
 }
 .mdc-drawer__content {
   overflow-y: scroll;
+  .regions {
+    margin-left: $unit;
+  }
 }
 .mdc-drawer__content-padded {
   padding: $unit;
@@ -2410,6 +2413,7 @@ background-color: #42842A;
     align-items: flex-start;
     z-index: 1;
     width: 320px;
+    min-height: 640px;
     margin-right: 1.5rem;
     margin-bottom: 0;
     padding-bottom: 1rem;
