--- a/sites/configurations/goodmoves/partials/vacancy-search-form.hbs
+++ b/sites/configurations/goodmoves/partials/vacancy-search-form.hbs
@@ -23,21 +23,21 @@
   <div class="mdc-drawer__content">
     <h2 class="mdc-drawer__content-heading hide-sm">Search jobs</h2>
     <div id="search-tab-bar" class="mdc-tab-bar mdc-tab-bar--fullwidth search-tab-bar" data-mdc-auto-init="MDCTabBar">
-      <a href="/search{{request.url.search}}" class="mdc-tab {{#compare request.url.pathname "/search"}}mdc-tab--active{{/compare}} details-tab" id="detailed-results">
+      <a href="/search{{@root.request.url.search}}" class="mdc-tab {{#compare @root.request.url.pathname "/search"}}mdc-tab--active{{/compare}} details-tab" id="detailed-results">
         <span class="far fa-list fa-fw" title="List"></span>
         List
       </a>
-      <a href="/map{{request.url.search}}" class="mdc-tab {{#compare request.url.pathname "/map"}}mdc-tab--active{{/compare}} map-tab">
+      <a href="/map{{@root.request.url.search}}" class="mdc-tab {{#compare @root.request.url.pathname "/map"}}mdc-tab--active{{/compare}} map-tab">
         <span class="far fa-map-marker-alt fa-fw" title="Map"></span>
         Map
       </a>
       <span class="mdc-tab-bar__indicator"></span>
     </div>
-    <form action="/{{#compare request.url.pathname "/map"}}map{{else}}search{{/compare}}" method="GET" class="search-form">
+    <form action="/{{#compare @root.request.url.pathname "/map"}}map{{else}}search{{/compare}}" method="GET" class="search-form">
       <div class="h-padding">
         <div class="mdc-text-field mdc-text-field--box mdc-text-field--with-leading-icon" data-mdc-auto-init="MDCTextField">
           <span class="far fa-search mdc-text-field__icon" tabindex="-1"></span>
-          <input type="text" id="{{instance_id}}-keywords" name="keywords" class="mdc-text-field__input mdc-text-field--fullwidth" value="{{request.params.query.keywords}}" data-lpignore="true" autocomplete="off">
+          <input type="text" id="{{instance_id}}-keywords" name="keywords" class="mdc-text-field__input mdc-text-field--fullwidth" value="{{@root.request.params.query.keywords}}" data-lpignore="true" autocomplete="off">
           <label class="mdc-floating-label mdc-floating-label--float-above" for="keywords">
             Keywords
           </label>
@@ -51,7 +51,7 @@
             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
               <div class="mdc-text-field mdc-text-field--box mdc-text-field--with-leading-icon" data-mdc-auto-init="MDCTextField">
                 <span class="far fa-map-marker-alt mdc-text-field__icon" tabindex="0" role="button"></span>
-                <input type="text" id="{{instance_id}}-location" name="location" class="mdc-text-field__input mdc-text-field--fullwidth" value="{{request.params.query.location}}" placeholder="" data-lpignore="true" data-location-options='
+                <input type="text" id="{{instance_id}}-location" name="location" class="mdc-text-field__input mdc-text-field--fullwidth" value="{{@root.request.params.query.location}}" placeholder="" data-lpignore="true" data-location-options='
                   {
                     "types": ["(regions)"],
                     "componentRestrictions": {
@@ -67,11 +67,11 @@
             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
               <div class="mdc-select mdc-select--box" data-mdc-auto-init="MDCSelect">
                 <select class="mdc-select__native-control" id="{{instance_id}}-distance" name="distance">
-                  <option value="8046.72"{{#compare request.params.query.distance "8046.72"}} selected{{/compare}}>5 miles</option>
-                  <option value="16093.44"{{#compare request.params.query.distance "16093.44"}} selected{{/compare}}>10 miles</option>
-                  <option value="40233.6"{{#compare request.params.query.distance "40233.6"}} selected{{/compare}}>25 miles</option>
-                  <option value="80467.2"{{#compare request.params.query.distance "80467.2"}} selected{{/compare}}>50 miles</option>
-                  <option value=""{{#compare request.params.query.distance ""}} selected{{/compare}}>no limit</option>
+                  <option value="8046.72"{{#compare @root.request.params.query.distance "8046.72"}} selected{{/compare}}>5 miles</option>
+                  <option value="16093.44"{{#compare @root.request.params.query.distance "16093.44"}} selected{{/compare}}>10 miles</option>
+                  <option value="40233.6"{{#compare @root.request.params.query.distance "40233.6"}} selected{{/compare}}>25 miles</option>
+                  <option value="80467.2"{{#compare @root.request.params.query.distance "80467.2"}} selected{{/compare}}>50 miles</option>
+                  <option value=""{{#compare @root.request.params.query.distance ""}} selected{{/compare}}>no limit</option>
                 </select>
                 <label class="mdc-floating-label mdc-floating-label--float-above" for="{{instance_id}}-distance">
                   Within
@@ -82,23 +82,23 @@
         </div>
       </div>
 
-      {{#if request.params.query.location ~}}
-      <input type="hidden" name="lat" value="{{request.params.query.lat}}" id="{{instance_id}}-lat">
-      <input type="hidden" name="lng" value="{{request.params.query.lng}}" id="{{instance_id}}-lng">
+      {{#if @root.request.params.query.location ~}}
+      <input type="hidden" name="lat" value="{{@root.request.params.query.lat}}" id="{{instance_id}}-lat">
+      <input type="hidden" name="lng" value="{{@root.request.params.query.lng}}" id="{{instance_id}}-lng">
       <input type="hidden" name="sort" value="distance" id="sort">
       {{/if ~}}
 
       <h3 class="mdc-drawer__content-heading cursor-pointer" data-collapse-target="#{{instance_id}}-salary-collapse" role="button" aria-pressed="false" aria-label="Show salary search options" tabindex="0">
         Salary
         <span class="mdc-icon-toggle pull-right">
-          <i class="far {{#if (getProperty request.params.query "salary_min")}}fa-chevron-up{{else}}fa-chevron-down{{/if}}" aria-hidden="true"></i>
+          <i class="far {{#if (getProperty @root.request.params.query "salary_min")}}fa-chevron-up{{else}}fa-chevron-down{{/if}}" aria-hidden="true"></i>
         </span>
       </h3>
-      <div id="{{instance_id}}-salary-collapse" style="{{#unless (getProperty request.params.query "salary_min")}}display: none;{{else}}{{#unless (getProperty request.params.query "salary_max")}}display: none;{{/unless}}{{/unless}}">
+      <div id="{{instance_id}}-salary-collapse" style="{{#unless (getProperty @root.request.params.query "salary_min")}}display: none;{{else}}{{#unless (getProperty @root.request.params.query "salary_max")}}display: none;{{/unless}}{{/unless}}">
         <div class="h-padding">
           <div class="mdc-text-field mdc-text-field--box mdc-text-field--with-leading-icon" data-mdc-auto-init="MDCTextField">
             <span class="far fa-arrow-alt-from-left mdc-text-field__icon" tabindex="-1"></span>
-            <input type="number" id="{{instance_id}}-salary_min" name="salary_min" class="mdc-text-field__input mdc-text-field--fullwidth" value="{{request.params.query.salary_min}}" data-lpignore="true">
+            <input type="number" id="{{instance_id}}-salary_min" name="salary_min" class="mdc-text-field__input mdc-text-field--fullwidth" value="{{@root.request.params.query.salary_min}}" data-lpignore="true">
             <label class="mdc-floating-label mdc-floating-label--float-above" for="{{instance_id}}-salary_min">
               Minimum salary
             </label>
@@ -109,7 +109,7 @@
         <div class="h-padding">
           <div class="mdc-text-field mdc-text-field--box mdc-text-field--with-leading-icon" data-mdc-auto-init="MDCTextField">
             <span class="far fa-arrow-alt-to-right mdc-text-field__icon" tabindex="-1"></span>
-            <input type="number" id="{{instance_id}}-salary_max" name="salary_max" class="mdc-text-field__input mdc-text-field--fullwidth" value="{{request.params.query.salary_max}}" data-lpignore="true">
+            <input type="number" id="{{instance_id}}-salary_max" name="salary_max" class="mdc-text-field__input mdc-text-field--fullwidth" value="{{@root.request.params.query.salary_max}}" data-lpignore="true">
             <label class="mdc-floating-label mdc-floating-label--float-above" for="{{instance_id}}-salary_max">
               Maximum salary
             </label>
@@ -121,7 +121,7 @@
       <!-- <div class="h-padding">
         <div class="mdc-text-field mdc-text-field--box mdc-text-field--with-leading-icon" data-mdc-auto-init="MDCTextField">
           <span class="far fa-arrow-alt-from-left mdc-text-field__icon" tabindex="-1"></span>
-          <input type="number" id="{{instance_id}}-salary_min" name="salary_min" class="mdc-text-field__input mdc-text-field--fullwidth" value="{{request.params.query.salary_min}}" data-lpignore="true">
+          <input type="number" id="{{instance_id}}-salary_min" name="salary_min" class="mdc-text-field__input mdc-text-field--fullwidth" value="{{@root.request.params.query.salary_min}}" data-lpignore="true">
           <label class="mdc-floating-label mdc-floating-label--float-above" for="{{instance_id}}-salary_min">
             Minimum salary
           </label>
@@ -132,7 +132,7 @@
       <div class="h-padding">
         <div class="mdc-text-field mdc-text-field--box mdc-text-field--with-leading-icon" data-mdc-auto-init="MDCTextField">
           <span class="far fa-arrow-alt-to-right mdc-text-field__icon" tabindex="-1"></span>
-          <input type="number" id="{{instance_id}}-salary_max" name="salary_max" class="mdc-text-field__input mdc-text-field--fullwidth" value="{{request.params.query.salary_max}}" data-lpignore="true">
+          <input type="number" id="{{instance_id}}-salary_max" name="salary_max" class="mdc-text-field__input mdc-text-field--fullwidth" value="{{@root.request.params.query.salary_max}}" data-lpignore="true">
           <label class="mdc-floating-label mdc-floating-label--float-above" for="{{instance_id}}-salary_max">
             Maximum salary
           </label>
@@ -140,18 +140,18 @@
         </div>
       </div> -->
 
-      {{#each (split "regions,roles,sectors,statuses" ",")}}
+      {{#each (split "statuses,roles,sectors" ",")}}
         <h3 class="mdc-drawer__content-heading cursor-pointer" data-collapse-target="#{{../instance_id}}-{{this}}-collapse" role="button" aria-pressed="false" aria-label="Show {{getProperty @root.context.metaData.termTypeLabels (concat this ".plural")}}" tabindex="0">
           {{getProperty @root.context.metaData.termTypeLabels (concat this ".plural")}}
           <span class="mdc-icon-toggle pull-right">
-            <i class="far {{#if (getProperty ../request.params.query this)}}fa-chevron-up{{else}}fa-chevron-down{{/if}}" aria-hidden="true"></i>
+            <i class="far {{#if (getProperty @root.request.params.query this)}}fa-chevron-up{{else}}fa-chevron-down{{/if}}" aria-hidden="true"></i>
           </span>
         </h3>
-        <div id="{{../instance_id}}-{{this}}-collapse"{{#unless (getProperty ../request.params.query this)}} style="display: none;"{{/unless}}>
-          {{#each (getProperty ../data.supplimentaryResponses.types.aggregations (concat this "_slugs.buckets")) ~}}
-          {{#if key ~}}
-          {{> term_checkbox slug=key field=../this selected=(getProperty ../../request.params.query ../this) instance_id=../../instance_id value=(lookup (getProperty ../../data.supplimentaryResponses.types.aggregations (concat ../this ".buckets")) @index)}}
-          {{/if ~}}
+        <div id="{{../instance_id}}-{{this}}-collapse"{{#unless (getProperty @root.request.params.query this)}} style="display: none;"{{/unless}}>
+          {{#each (getProperty @root.data.supplimentaryResponses.types.aggregations (concat this "_slugs.buckets")) ~}}
+            {{#if key ~}}
+              {{> term_checkbox slug=key field=../this selected=(getProperty @root.request.params.query ../this) instance_id=../../instance_id value=(lookup (getProperty @root.data.supplimentaryResponses.types.aggregations (concat ../this ".buckets")) @index)}}
+            {{/if ~}}
           {{/each ~}}
         </div>
       {{/each}}
