--- a/sites/configurations/scotlandforeurope/layouts/default.hbs
+++ b/sites/configurations/scotlandforeurope/layouts/default.hbs
@@ -23,7 +23,7 @@
   <meta name="msapplication-TileImage" content="https://storage.googleapis.com/scvo-assets/scvo-frontend/assets/images/icons/scotlandforeurope/ms-icon-144x144.png">
   <meta name="theme-color" content="#0070bb">
   <link type="text/css" rel="stylesheet" href="/assets/css/material-components-web.min.css">
-  <link type="text/css" rel="stylesheet" href="/assets/fonts/fontawesome/css/fontawesome-all.min.css">
+  <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-TXfwrfuHVznxCssTxWoPZjhcss/hp38gEOH8UPZG/JcXonvBQ6SlsIF49wUzsGno" crossorigin="anonymous">
   <link type="text/css" rel="stylesheet" href="/assets/css/scotlandforeurope-styles.css">
   <!-- <link type="text/css" rel="stylesheet" href="  https://storage.googleapis.com/scvo-assets/temporary/scotlandforeurope-styles.css"> -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-3467930-31"></script>
