--- a/sites/configurations/scvo/layouts/default.hbs
+++ b/sites/configurations/scvo/layouts/default.hbs
@@ -61,7 +61,7 @@
   {{/if ~}}
   </script>
   <link type="text/css" rel="stylesheet" href="/assets/css/material-components-web.min.css">
-  <link type="text/css" rel="stylesheet" href="/assets/fonts/fontawesome/css/fontawesome-all.min.css">
+  <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-TXfwrfuHVznxCssTxWoPZjhcss/hp38gEOH8UPZG/JcXonvBQ6SlsIF49wUzsGno" crossorigin="anonymous">
   <link type="text/css" rel="stylesheet" href="/assets/css/scvo-styles.css">
   <!-- <script>
   if(location.host.indexOf('.local') > -1){
