Fixed font issues

--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -255,20 +255,26 @@ header {
   }
 }
 
-li,
 p,
-footer h3,
+li,
 .mdc-tab,
+.mdc-tab,
+footer h3,
 .mdc-chip,
 .mdc-card,
+.mdc-button,
 .mdc-select,
 .mdc-button,
+.gm-style-iw,
+.mdc-form-field,
 .mdc-typography,
 .mdc-form-field,
 .mdc-text-field,
 .mdc-dialog__body,
+.mdc-card__subtitle,
 .mdc-floating-label,
 .mdc-card__subtitle,
+.mdc-snackbar__text,
 .mdc-textfield__input,
 .mdc-typography--body1,
 .mdc-typography--body2,
@@ -294,8 +300,6 @@ footer h3,
 .mdc-simple-menu .mdc-list-item,
 .mdc-temporary-drawer .mdc-list-item,
 .mdc-drawer--temporary .mdc-list-item,
-.mdc-snackbar__text,
-.gm-style-iw,
 .mdc-list {
   font-family: $base-font-family, Helvetica, Arial, sans-serif;
   font-weight: $base-font-weight;
