--- a/assets/css/scvo-styles.scss
+++ b/assets/css/scvo-styles.scss
@@ -841,15 +841,31 @@ img.responsive {
   max-width: 100%;
 }
 
+p,
+li,
 .mdc-tab,
+.mdc-tab,
+footer h3,
+.mdc-chip,
+.mdc-card,
 .mdc-button,
+.mdc-select,
+.mdc-button,
+.gm-style-iw,
 .mdc-form-field,
 .mdc-typography,
+.mdc-form-field,
+.mdc-text-field,
+.mdc-dialog__body,
 .mdc-card__subtitle,
+.mdc-floating-label,
+.mdc-card__subtitle,
+.mdc-snackbar__text,
 .mdc-textfield__input,
 .mdc-typography--body1,
 .mdc-typography--body2,
 .mdc-typography--title,
+.mdc-text-field__input,
 .mdc-card__title--large,
 .mdc-typography--caption,
 .mdc-menu .mdc-list-item,
@@ -863,8 +879,12 @@ img.responsive {
 .mdc-typography--headline6,
 .mdc-typography--headline7,
 .mdc-card__supporting-text,
+.mdc-dialog__header__title,
+.mdc-select__native-control,
 .mdc-typography--subheading2,
+.mdc-list-item__secondary-text,
 .mdc-simple-menu .mdc-list-item,
+.mdc-temporary-drawer .mdc-list-item,
 .mdc-drawer--temporary .mdc-list-item,
 .mdc-list {
   font-family: $base-font-family, Helvetica, Arial, sans-serif;
