--- a/sites/configurations/scvo/templates/grants/grant-charter-search.hbs
+++ b/sites/configurations/scvo/templates/grants/grant-charter-search.hbs
@@ -36,6 +36,14 @@
             <div class="mdc-layout-grid">
               <div class="mdc-layout-grid__inner">
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
+                  <!-- <div class="mdc-text-field mdc-text-field--box mdc-text-field--with-leading-icon mdc-text-field--upgraded" data-mdc-auto-init="MDCTextField">
+                    <span class="far fa-search mdc-text-field__icon" tabindex="-1" data-mdc-tabindex="-1" data-mdc-tabindex-handled="true"></span>
+                    <input type="text" id="grant-charter-keywords" name="keywords" class="mdc-text-field__input mdc-text-field--fullwidth searchRoute" value="{{request.params.query.q}}" data-lpignore="true" autocomplete="off" data-mdc-tabindex-handled="true" tabindex="-1" placeholder="Search query">
+                    <label class="mdc-floating-label" for="keywords">
+                      Keywords
+                    </label>
+                    <div class="mdc-line-ripple"></div>
+                  </div> -->
                   <div class="mdc-textfield mdc-textfield--upgraded">
                     <input type="text" class="mdc-textfield__input searchRoute" name="q" id="grant-charter-keywords" value="{{request.params.query.q}}" placeholder="Search query">
                     <button type="submit" class="mdc-toolbar__icon mdc-toolbar__search search-button-large" aria-label="Search" alt="Search">
