--- a/assets/css/scvo-styles.scss
+++ b/assets/css/scvo-styles.scss
@@ -1085,6 +1085,11 @@ section.search {
       padding: 0 $unit*2.75 0 $unit*0.75;
       font-size: 1.1rem;
     }
+    .mdc-select {
+      line-height: 35px;
+      height: 35px;
+      margin: 0;
+    }
     .search-button-large {
       padding: 0.75rem;
       position: absolute;
