--- a/sites/configurations/goodmoves/layouts/default.hbs
+++ b/sites/configurations/goodmoves/layouts/default.hbs
@@ -264,7 +264,7 @@ if(location.host.indexOf('.local') > -1){
 
       <main class="mdc-theme--background mdc-toolbar-fixed-adjust {{#if layoutParts.sidebar}}drawer-container-permanent{{else}}drawer-container-temporary{{/if}}">
         {{#if layoutParts.sidebar }}
-        <aside class="mdc-drawer mdc-drawer--temporary mdc-drawer--occasional" id="sidebar-temporary" data-mdc-auto-init="MDCTemporaryDrawer">
+        <aside class="mdc-drawer mdc-drawer--temporary mdc-drawer--occasional mdc-elevation--z3" id="sidebar-temporary" data-mdc-auto-init="MDCTemporaryDrawer">
           <div class="mdc-drawer__drawer">
             {{{layoutParts.sidebar}}}
           </div>
