--- a/sites/configurations/digitalparticipation/templates/head-tags.hbs
+++ b/sites/configurations/digitalparticipation/templates/head-tags.hbs
@@ -16,10 +16,10 @@
 <meta property="og:image:width" content="128" data-dynamic="true">
 <meta property="og:image:height" content="128" data-dynamic="true">
 {{/if ~}}
-{{#if description ~}}
-<meta property="og:summary" content="{{description}}" data-dynamic="true">
-<meta name="description" content="{{description}}" data-dynamic="true">
-{{/if ~}}
+{{#ifAny og_summary description ../og_summary ../description ~}}
+<meta property="og:summary" content="{{stripTags (regexReplace (default og_summary (default ../og_summary (default description ../description))) '\r|\n' 'gi' '')}}" data-dynamic="true">
+<meta name="description" content="{{stripTags (regexReplace (default description (default ../description (default og_summary ../og_summary))) '\r|\n' 'gi' '')}}" data-dynamic="true">
+{{/ifAny ~}}
 {{#if rendered.json_ld ~}}
 <script type="application/ld+json" data-dynamic="true">
 {{{rendered.json_ld}}}
