--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -2442,6 +2442,11 @@ background-color: #42842A;
       pointer-events: all;
     }
   }
+  #perm-salary-collapse {
+    .mdc-text-field--box {
+      margin: 0 0 $unit;
+    }
+  }
 
   /*
   body.map #map-full {
