--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -828,6 +828,9 @@ a {
     color: $mdc-theme-primary;
     -webkit-tap-highlight-color: transparent;
   }
+  .leaflet-control a {
+    color: black;
+  }
 }
 .vacancy_icon {
   text-align: center;
