Tidy up layouts

--- a/sites/configurations/goodmoves/templates/vacancies/map-foot.hbs
+++ b/sites/configurations/goodmoves/templates/vacancies/map-foot.hbs
@@ -1,5 +1,5 @@
-<script src="https://cdnjs.cloudflare.com/ajax/libs/typeahead.js/0.11.1/typeahead.bundle.min.js"></script>
-<script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/typeahead.js/0.11.1/typeahead.bundle.min.js"></script>
+<script type="text/javascript">
 var terms = {
   sectors: [
     {{#each data.supplimentaryResponses.types.aggregations.sectors.buckets ~}}
