--- a/sites/configurations/goodmoves/templates/vacancies/vacancy-foot.hbs
+++ b/sites/configurations/goodmoves/templates/vacancies/vacancy-foot.hbs
@@ -1,5 +1,4 @@
-<script>
-
+<script type="text/javascript">
 var tabs = new mdc.tabs.MDCTabBar(document.querySelector("#vacancy-tab-bar"));
 var panels = document.querySelector(".panels");
 tabs.preventDefaultOnClick = true;
