--- a/sites/configurations/goodmoves/partials/vacancy-search-results.hbs
+++ b/sites/configurations/goodmoves/partials/vacancy-search-results.hbs
@@ -52,7 +52,7 @@
     {{~/if}}
   {{~/if~}}
 {{~/with~}}">
-        <label for="saved-search-name" class="mdc-floating-label mdc-floating-label--float-above">Save search</label>
+        <label for="saved-search-name" class="mdc-floating-label">Save search</label>
         <div class="mdc-line-ripple"></div>
       </div>
       <div class="mdc-form-field">
