--- a/sites/configurations/goodmoves/templates/account/sign-in.hbs
+++ b/sites/configurations/goodmoves/templates/account/sign-in.hbs
@@ -28,7 +28,7 @@
         <div class="mdc-text-field mdc-text-field--box mdc-text-field--with-leading-icon" data-mdc-auto-init="MDCTextField">
           <span class="far fa-at mdc-text-field__icon" tabindex="-1"></span>
           <input type="text" id="sign-in-email" class="mdc-text-field__input mdc-text-field--fullwidth" />
-          <label class="mdc-floating-label mdc-floating-label--float-above" for="sign-in-email">
+          <label class="mdc-floating-label" for="sign-in-email">
             Email
           </label>
           <div class="mdc-line-ripple"></div>
@@ -37,7 +37,7 @@
         <div class="mdc-text-field mdc-text-field--box mdc-text-field--with-leading-icon" data-mdc-auto-init="MDCTextField">
           <span class="far fa-key mdc-text-field__icon" tabindex="-1"></span>
           <input type="password" id="sign-in-password" class="mdc-text-field__input mdc-text-field--fullwidth" />
-          <label class="mdc-floating-label mdc-floating-label--float-above" for="sign-in-password">
+          <label class="mdc-floating-label" for="sign-in-password">
             Password
           </label>
           <div class="mdc-line-ripple"></div>
