--- a/sites/configurations/goodmoves/templates/account/sign-up.hbs
+++ b/sites/configurations/goodmoves/templates/account/sign-up.hbs
@@ -28,7 +28,7 @@
         <div class="mdc-text-field mdc-text-field--box mdc-text-field--with-leading-icon" data-mdc-auto-init="MDCTextField">
           <span class="far fa-at mdc-text-field__icon" tabindex="-1"></span>
           <input type="text" id="sign-up-email" class="mdc-text-field__input mdc-text-field--fullwidth" data-lpignore="true" autocomplete="off" />
-          <label class="mdc-floating-label mdc-floating-label--float-above" for="sign-up-email">
+          <label class="mdc-floating-label" for="sign-up-email">
             Email
           </label>
           <div class="mdc-line-ripple"></div>
@@ -36,7 +36,7 @@
         <div class="mdc-text-field mdc-text-field--box mdc-text-field--with-leading-icon" data-mdc-auto-init="MDCTextField">
           <span class="far fa-at mdc-text-field__icon" tabindex="-1"></span>
           <input type="text" id="sign-up-email-confirm" class="mdc-text-field__input mdc-text-field--fullwidth" data-lpignore="true" autocomplete="off" />
-          <label class="mdc-floating-label mdc-floating-label--float-above" for="sign-up-email-confirm">
+          <label class="mdc-floating-label" for="sign-up-email-confirm">
             Confirm email
           </label>
           <div class="mdc-line-ripple"></div>
@@ -45,7 +45,7 @@
         <div class="mdc-text-field mdc-text-field--box mdc-text-field--with-leading-icon" data-mdc-auto-init="MDCTextField">
           <span class="far fa-key mdc-text-field__icon" tabindex="-1"></span>
           <input type="password" id="sign-up-password" class="mdc-text-field__input mdc-text-field--fullwidth" data-lpignore="true" autocomplete="off" />
-          <label class="mdc-floating-label mdc-floating-label--float-above" for="sign-up-password">
+          <label class="mdc-floating-label" for="sign-up-password">
             Password
           </label>
           <div class="mdc-line-ripple"></div>
@@ -53,7 +53,7 @@
         <div class="mdc-text-field mdc-text-field--box mdc-text-field--with-leading-icon" data-mdc-auto-init="MDCTextField">
           <span class="far fa-key mdc-text-field__icon" tabindex="-1"></span>
           <input type="password" id="sign-up-password-confirm" class="mdc-text-field__input mdc-text-field--fullwidth" data-lpignore="true" autocomplete="off" />
-          <label class="mdc-floating-label mdc-floating-label--float-above" for="sign-up-password-confirm">
+          <label class="mdc-floating-label" for="sign-up-password-confirm">
             Confirm password
           </label>
           <div class="mdc-line-ripple"></div>
