Shortlist button when not logged in

--- a/sites/configurations/goodmoves/partials/shortlist-chip.hbs
+++ b/sites/configurations/goodmoves/partials/shortlist-chip.hbs
@@ -17,4 +17,9 @@
     }
   }
   {{/ajax_chip}}
+{{else}}
+  <div class="mdc-chip" data-dialog-target="#shortlist-dialog">
+    <span class="far fa-star mdc-chip__icon mdc-chip__icon--leading" aria-hidden="true"></span>
+    <div class="mdc-chip__text noselect">Shortlist</div>
+  </div>
 {{/if}}
