--- a/sites/configurations/goodmoves/partials/vacancy-search-form.hbs
+++ b/sites/configurations/goodmoves/partials/vacancy-search-form.hbs
@@ -92,7 +92,7 @@
           <i class="far {{#if (getProperty @root.request.params.query "salary_min")}}fa-chevron-up{{else}}fa-chevron-down{{/if}}" aria-hidden="true"></i>
         </span>
       </h3>
-      <div id="{{instance_id}}-salary-collapse" style="{{#unless (getProperty @root.request.params.query "salary_min")}}display: none;{{else}}{{#unless (getProperty @root.request.params.query "salary_max")}}display: none;{{/unless}}{{/unless}}">
+      <div id="{{instance_id}}-salary-collapse"{{#unless (getProperty @root.request.params.query "salary_min")}}{{#unless (getProperty @root.request.params.query "salary_max")}} style="display: none;"{{/unless}}{{/unless}}>
         <div class="h-padding">
           <div class="mdc-text-field mdc-text-field--box mdc-text-field--with-leading-icon" data-mdc-auto-init="MDCTextField">
             <span class="far fa-arrow-alt-from-left mdc-text-field__icon" tabindex="-1"></span>
